# HIDtaiko

./: .gitignore  LICENSE  README.md  README_EN.md  explanation.txt
.tmp.driveupload/: 18356  18358  18360  18362  18364  18366  18368  18370  18372  18374  18376  18378  18380  18382  18384  18390  18392  18396  18398  18400  18402  18404  18406  18408  18410  18412  18414  18416  18418  18420  18422  18424  18426  18430  18434  18436  18438  18440  18442  18444  (+349 more)
HIDtaiko_connector_rp2040/: .gitignore  CMakeLists.txt  rp2040readme.md  upload
HIDtaiko_connector_rp2040/algorithm/: serial.dio
HIDtaiko_connector_rp2040/case/: case.stl  lib_rp.stl  lid.stl
HIDtaiko_connector_rp2040/kicad_pcb/: hid_taiko_rp2040_lite.kicad_pro
HIDtaiko_connector_rp2040/original_uf2/: hidtaiko.uf2  hidtaiko_1p_D,F,J,K.uf2  hidtaiko_2p_X,C,N,M.uf2
HIDtaiko_connector_rp2040/rp2_common/: BUILD.bazel  README.md
HIDtaiko_connector_rp2040/src/: CMakeLists.txt  keyboard.h  main.cpp  main.dio  tusb_config.h  usb_descriptors.c  usb_descriptors.h
HIDtaiko_connector_ver1.2/: case.stl  connector_case.stl  hidtaiko_pcb.7z  sketch_connector1.2
HIDtaiko_connector_ver1.2/case.ver.2.0/: ボディ1.stl  ボディ2.stl
SNS,shop/: アイコン.af
arduino_minimum/: arduino_connctor.md
docs/: CHANGELOG.md  i18n.js  index.html  main.css  main.js  protocol.md  v12.html  v12.js
drumhead/: readme_drumhead.md  sensor.md
sketch_developmentSW/: sketch_developmentSW.ino
sketch_hidtaiko/: sketch_hidtaiko.ino
sketch_hidtaiko_development/: sketch_hidtaiko_development.ino
sketch_taiko_signal_tracker/: sketch_taiko_signal_tracker.ino
(+511 files in other folders)
